refactor sounds, fix crash when minimize